--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -93,7 +93,8 @@ h3 {
 }
 
 .meetup {
-  background-color: #f4f4f4;
+  background-color: #d9e2fb;
+  border-radius: 10px;
   margin: 10px 0;
   padding: 20px 0 10px;
   position: relative;
